--- a/wjw/gulp/css/login.scss
+++ b/wjw/gulp/css/login.scss
@@ -41,16 +41,15 @@
     .box{
         width: 430px;
         height: 460px;
-        background: green;
         float: right;
         margin-top: 15px;
         margin-right: 60px;
         text-align: center;
+        background: white;
         .top{
             
             width:430px;
             height: 57px;
-            background: red;
             .as1{
                font-size: 16px; 
                float: left;
@@ -69,20 +68,83 @@
             }
         }
         input{
-            width: 350px;
+            width: 312px;
             height: 44px;
             border: 1px solid #cccccc;
             margin-top: 15px;
-            
-        }
-        .inp1{
-            border-bottom: none;
+            padding-left:68px;
             background:url(../imgs/login/jlt.png) no-repeat center;
-            background-position: 0px 0px;
-            padding-left: 30px;
         }
-       .inp2{
-            border-bottom: none;
+        form input:nth-child(1){
+            border-bottom: none;          
+            background-position: 27px 12px;
+           
+        }
+       form input:nth-child(2){        
+            background-position: 27px -102px;
+           
+        }
+        form input:nth-child(3){        
+            background-position: 27px -162px;
+           
+        }
+         form input:nth-child(4){   
+            width: 162px;
+            height: 44px;     
+            background-position: 27px -234px;
+            margin-left: 24px;
+           float: left;
+           border-top: none; 
+           
+        }
+        form .as1{
+            display: inline-block;
+            width: 136px;
+            height: 44px;
+            border:1px solid #009de6;
+            float: right;
+            margin-top: 15px;
+            margin-right: 24px;
+            border-top: none; 
+            font-size: 12px;
+            color: #009de6;
+             text-decoration: none;
+             line-height: 44px;
+           
+        }
+        form .inp5{
+            width: 14px;
+            height: 14px;
+            font-size: 14px;
+            color: #666666;
+            float:left;
+            margin-top: 15px;
+            margin-left: 25px;
+        }
+        form span{
+            font-size: 14px;
+            color: #666666;
+            float:left;
+            margin-top: 12px;
+        }
+        form .as2{
+            font-size: 14px;
+            color: #009de6;
+            float:left;
+            margin-top:12px;
+        }
+         form .as3{
+            width: 380px;
+            height: 44px;
+            float:left;
+            margin-top:12px;
+            background: #009de6;
+            font-size: 18px;
+            color: white;
+            text-decoration: none;
+            line-height: 44px;
+            margin-left: 25px;
         }
     }
 }
+ 
