--- a/wjw/gulp/css/login.scss
+++ b/wjw/gulp/css/login.scss
@@ -1,37 +1,40 @@
 @charset "utf-8";
 *{
-	padding:0;
-	margin:0;
+    padding:0;
+    margin:0;
 }
 .header{
-	width:100%;
-	height:90px;
-	.right{
-		width:230px;
-		height:50px;
-		float:left;
-		margin-top: 30px;
-		margin-left: 60px;
-		background: url(../imgs/login/log.png) no-repeat center;
-		background-size:230px 50px ;
-	}
-	.left{
-		width:430px;
-		height:50px;
-		margin-top: 40px;
+    width:100%;
+    height:90px;
+    .right{
+        width:230px;
+        height:50px;
+        float:left;
+        margin-top: 30px;
         margin-left: 60px;
-		float:right;
-		span{
-		    font-size: 14px;
-		    color: #a4a4a4;
-		    line-height: 50px;
-		    a{
-		       color: #a4a4a4; 
-		       
-		    }
-		}
-	}
-	
+        background: url(../imgs/login/log.png) no-repeat center;
+        background-size:230px 50px ;
+    }
+    .left{
+        width:430px;
+        height:50px;
+        margin-top: 40px;
+        margin-left: 60px;
+        float:right;
+        span{
+            font-size: 14px;
+            color: #a4a4a4;
+            line-height: 50px;
+            a{
+               color: #a4a4a4; 
+               
+            }
+            a:hover{
+                color: #009de6;
+            }
+        }
+    }
+    
 }
 .content{
     width: 100%;
@@ -40,7 +43,7 @@
     background-size: cover;
     .box{
         width: 430px;
-        height: 460px;
+//      height: 460px;
         float: right;
         margin-top: 15px;
         margin-right: 60px;
@@ -75,20 +78,16 @@
             padding-left:68px;
             background:url(../imgs/login/jlt.png) no-repeat center;
         }
-        form input:nth-child(1){
-            border-bottom: none;          
+       .for input:nth-child(1){                 
             background-position: 27px 12px;
            
         }
-       form input:nth-child(2){        
+       .for input:nth-child(2){        
             background-position: 27px -102px;
-           
-        }
-        form input:nth-child(3){        
-            background-position: 27px -162px;
-           
-        }
-         form input:nth-child(4){   
+           display: block;
+           margin-left: 25px;
+        }       
+         .for input:nth-child(4){   
             width: 162px;
             height: 44px;     
             background-position: 27px -234px;
@@ -97,7 +96,7 @@
            border-top: none; 
            
         }
-        form .as1{
+        .for .as1{
             display: inline-block;
             width: 136px;
             height: 44px;
@@ -112,7 +111,7 @@
              line-height: 44px;
            
         }
-        form .inp5{
+        .for .inp5{
             width: 14px;
             height: 14px;
             font-size: 14px;
@@ -121,30 +120,133 @@
             margin-top: 15px;
             margin-left: 25px;
         }
-        form span{
+       .for .sp1{
             font-size: 14px;
             color: #666666;
             float:left;
             margin-top: 12px;
         }
-        form .as2{
+       .for .as2{
             font-size: 14px;
             color: #009de6;
-            float:left;
+            float:right;
             margin-top:12px;
+            margin-right: 25px;
+            text-decoration: none;
         }
-         form .as3{
+         .for .inp4{
             width: 380px;
-            height: 44px;
-            float:left;
+            height: 44px;       
             margin-top:12px;
             background: #009de6;
             font-size: 18px;
             color: white;
-            text-decoration: none;
-            line-height: 44px;
-            margin-left: 25px;
+            padding-left: 6px;       
+            line-height: 44px;            
+            margin-bottom: 90px;
+            text-align: center;
         }
+        .ps1{
+            font-size: 15px;
+            color: #969696;
+            a{
+                color: #009de6;
+                text-decoration: none;
+            }
+        } 
+        .ps2{
+            width: 330px;         
+            height: 11px;
+            display: inline-block;
+            margin-top: 10px;
+            margin-left: 6px;
+             line-height: 11px;
+            background:url(../imgs/login/bj.png) repeat-x center ;
+           span{
+                display: inline-block;
+                width:90px ;
+                margin-top: -5px;
+                background: white;
+                color: #969696;
+                font-size: 11px;   
+           }
+        } 
+        .ps3{
+            width: 330px;
+            height: 60px;            
+            margin: 0 auto;  
+           
+            a{
+                display: inline-block;
+                width: 33px;
+                height: 33px;
+                background: yellow;
+                border-radius: 50%;             
+                vertical-align: middle;
+                background: url(../imgs/login/qq.png) center;
+                background-size: cover;
+            }
+            a:nth-child(1){
+              background-position: 0px 0px;
+            }
+             a:nth-child(2){
+              background-position: -44px 0px;
+            }
+             a:nth-child(3){
+              background-position: -87px 0px;
+            }
+            span{
+              display: inline-block;
+              color: #969696;
+              font-size: 11px;
+               line-height: 60px; 
+               vertical-align: middle; 
+               cursor: pointer;
+            }
+        }
+        .ps4{
+            width: 330px;
+            height: 60px;            
+            margin: 0 auto;
+             display: none;                   
+            a{
+                display: inline-block;
+                width: 33px;
+                height: 33px;
+                background: yellow;
+                border-radius: 50%;             
+                vertical-align: middle;
+                background: url(../imgs/login/qq.png) center;
+                background-size: cover;
+            }
+            a:nth-child(1){
+              background-position: 0px 0px;
+            }
+             a:nth-child(2){
+              background-position: -44px 0px;
+            }
+            a:nth-child(3){
+              background-position: -87px 0px;
+            }
+            a:nth-child(4){
+              background-position: -130px 0px;
+            }
+            a:nth-child(5){
+              background-position: -175px 0px;
+            }
+            a:nth-child(6){
+              background-position: -216px 0px;
+            }
+            span{
+                cursor: pointer; 
+              display: inline-block;
+              color: #969696;
+              font-size: 11px;
+              line-height: 60px; 
+              vertical-align: middle; 
+            }
+        }       
     }
 }
+
  
