--- a/wjw/gulp/css/shopping.scss
+++ b/wjw/gulp/css/shopping.scss
@@ -161,12 +161,13 @@ li{
 		min-height: 252px;
 		background: white;
 		margin: 0 auto;
+		display: none;
 		.che {
 			width:138px ;
 			height: 100px;
 			float: left;
 			margin-top: 72px;
-   			 margin-left: 250px;
+   			margin-left: 250px;
 			background: url(../imgs/shopping/jlt2.png) right no-repeat;
 			background-position: 0px -210px;
 		}
@@ -183,9 +184,181 @@ li{
    				font-size: 12px;
    				color: #0060ae;
    			}
-		}
-		
+		}	
 	}
+	.wuping{
+        width: 983px;
+        min-height: 252px;
+        background: white;
+        margin: 0 auto;   
+        .list{
+           width: 983px;
+           height: 38px; 
+            font-size: 10px;
+             p:nth-of-type(1){
+                width: 490px;
+                height: 38px;
+                float: left;          
+                line-height: 38px;
+                input{               
+                  margin-left: 13px;
+                    
+                }
+                span{
+                    display: inline-block;                           
+                    margin-left: 70px;
+                }
+            }
+            p:nth-of-type(2){
+                width: 492px;
+                height: 38px;
+                float: right;           
+                span{
+                    line-height: 38px;
+                    padding-right: 124px;
+                }
+                span:nth-child(4){
+                     padding-right: 0px;
+                }
+                span:nth-child(3){
+                    color: #a40e59;
+                }
+            }   
+         }
+         .name{
+            width: 983px;
+            height: 38px; 
+            font-size: 14px;
+            background: #e3efff;
+            input{
+                margin-left: 13px;
+                margin-top: 10px;        
+            }                   
+        } 
+        .cont{
+             width: 970px;
+             height: 100px;                       
+             padding-left: 13px;
+             border-bottom:1px solid #CCCCCC;
+             .left{
+                 width:480px ;
+                 height: 100px;                
+                 float: left;
+                 vertical-align: middle;
+                  line-height: 100px;
+                  p{
+                    width: 60px;
+                    height: 60px;             
+                    display: inline-block;
+                    vertical-align: middle;
+                    line-height: 100px;
+                    margin-left: 18px;
+                    border: 1px solid #CCCCCC;
+                    border-left:none;
+                  }
+                  span{
+                    display: inline-block;
+                    width: 165px;
+                    height: 24px;
+                    font-size: 10px;                  
+                    vertical-align: middle;
+                    margin-left: 16px;
+                    line-height: 15px;
+                  }
+             }
+             .right{
+                 width: 486px;
+                 height: 100px;
+                 float: right;
+                 p{
+                     display:inline-block;
+                     line-height: 100px;
+                     margin-right: 87px;
+                 }
+                 p:nth-child(2){
+                     border-top:1px solid #CCCCCC;
+                     border-bottom:1px solid #CCCCCC;
+                    line-height: 20px;
+                    text-align: center;
+                    span{
+                        display: inline-block;
+                        width: 35px;
+                        height: 20px;
+                        border-right:1px solid #CCCCCC; 
+                         border-left:1px solid #CCCCCC; 
+                    }
+                 }
+                 p:nth-child(3){
+                     margin-left: 12px;
+                     color: mediumvioletred;
+                 }
+                 p:nth-child(4){
+                    margin-right: 0;
+                    width: 27px;
+                    height: 40px;
+                    font-size: 13px;
+                    
+                    line-height: 20px;
+                    margin-left: -4px; 
+                    a{
+                        color: #a5b9d6;
+                    }                  
+                 }
+             }
+            
+        }
+        
+                 
+    }
+    .tongji{
+           width: 983px;
+           height: 80px;     
+           font-size: 12px;
+           margin-top: 27px;
+           margin: 0 auto;
+           background: white;
+           border-top:2px solid  #A40C59;
+           input{
+               margin-left: 13px;
+               display: inline-block;
+               line-height: 80px;
+           }
+           p:nth-of-type(1){
+               display: inline-block;
+               line-height: 80px;
+               a{
+                   margin-left: 16px;
+                   color: #333333;
+               }
+           }
+           p:nth-of-type(2){
+               display: inline-block;
+               margin-left: 160px;
+               line-height: 80px;
+                color: #333333;
+           }
+           p:nth-of-type(3){
+                display: inline-block;
+                line-height: 80px;
+                color: #cc0033;
+                font-size: 22px;
+                font-weight: 700;
+                span{
+                   font-size: 22px;
+                }
+           }
+           .jiesuan{
+             display: inline-block; 
+             width: 160px;
+             height: 50px;
+             color: white;
+             font-size: 18px;
+             text-align: center;
+             line-height: 50px; 
+             background: #A40C59;
+             margin-left: 20px;
+           }
+        }
 	.content_01{
 		width: 1200px;
 		height: 400px;
@@ -213,15 +386,22 @@ li{
 			}
 		}
 		.bottom{
-				padding-left: 37px;
-				padding-right: 44px;
-				overflow: hidden;
-				width: 1098px;
+				width: 1200px;
 				height: 360px;
 				position: relative;
+		.con {
+			width: 1120px;
+			height: 360px;
+			margin: 0 auto;
+			overflow: hidden;
+			position: relative;
+		}		
 			ul {
 				width: 3000px;
 				height: 360px;
+				position: absolute;
+				left: 0px;
+				top: 0px;
 				li{
 					width: 225px;
 					height: 360px;
@@ -281,7 +461,7 @@ li{
 					background:url(../imgs/shopping/jlt.png);
 					background-position: 15px 0px;
 					position: absolute;
-					right: 0px;
+					right: 25px;
 					top:185px;
 				}
 			}
@@ -306,7 +486,7 @@ li{
 	margin-top: 50px;
 }
 .top_1:nth-child(1){
-	margin-left: 40px;
+	margin-left: 78px;
 }
 .top_1 img{
 	display: inline-block;
